ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prova
  labels:
    name: prova
