simpleapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapp-service
  namespace: prova
spec:
  type: ClusterIP
  selector:
    app: simpleapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
