challenge-ingress.yaml
apiVersion:  networking.k8s.io/v1 
kind: Ingress
metadata:
  name: simpleapp
  namespace: prova
spec:
  rules:
  - host: app.prova
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simpleapp-service
            port:
              number: 80
  - host: kibana.prova
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kibana
            port:
              number: 5601
